# LMC-CPP

./: .gitignore  .gitmodules  CMakeLists.txt  LMC.sln  LMCCli.cpp  LMCCli.vcxproj  LMCCli.vcxproj.filters  MicrosoftAccount.cpp  MicrosoftAccount.h
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml
.github/workflows/: cmake-multi-platform.yml  labeler.yml
LMCCli/: LMC.cpp  LMC.vcxproj.filters  LMCCli.vcxproj  lmc.cpp
LMCCli/Commands/: Command.h  InstanceCommand.h  LaunchCommand.cpp
LMCCli/Exceptions/commands/: CommandException.h
LMCCli/Handlers/: CommandHandler.cpp
LMCCli/commands/: Command.h  InstanceCommand.cpp  LaunchCommand.cpp  LaunchCommand.h  command.cpp  command.h  launch_command.cpp  launch_command.h
LMCCli/core/: Instance.cpp
LMCCli/handlers/: CommandHandler.cpp  command_handler.cpp  command_handler.h
cli/: LMC.cpp
cli/Commands/: CommandBase.h  CommandHandler.cpp  CommandHandler.h  InstanceCommand.cpp  InstanceCommand.h  LaunchCommand.cpp  LaunchCommand.h
cli/Core/: EntryPoint.cpp  FileSystem.cpp  FileSystem.h  HTTPRequest.cpp  HTTPRequest.h  Instance.cpp  Instance.h
cli/Handlers/: CommandHandler.cpp  CommandHandler.h  FSHandler.cpp  FSHandler.h
cli/Instances/: Instance.cpp  Instance.h
cli/Minecraft/: Minecraft.cpp  Minecraft.h  Vanilla.cpp  Vanilla.h
cli/commands/: Command.h  InstanceCommand.cpp  InstanceCommand.h  LaunchCommand.cpp  LaunchCommand.h
cli/core/: Instance.cpp
cli/handlers/: CommandHandler.cpp  CommandHandler.h  FsHandler.cpp
cli/minecraft/: Minecraft.cpp  Vanilla.cpp  Vanilla.h
include/commands/: Command.h  InstanceCommand.h  LaunchCommand.h
include/core/: Instance.h
include/handlers/: FsHandler.h
include/minecraft/: Minecraft.h
libraries/sha1/: CMakeLists.txt
libraries/tomlplusplus/: CMakeLists.txt
src/: LMC.cpp
src/Core/: Instance.h
src/Handlers/: CommandHandler.cpp
src/commands/: Command.cpp  InstanceCommand.cpp  LaunchCommand.cpp
src/core/: Instance.cpp
src/handlers/: CommandHandler.cpp  FsHandler.cpp
src/minecraft/: Vanilla.cpp
(+37 files in other folders)
